# final_assessment

./: README.md
install/: local_setup.sh  setup.sh  setup.zsh
install/final_assessment/lib/final_assessment/: publisher
install/final_assessment/share/final_assessment/: local_setup.sh  package.bash  package.ps1  package.sh  package.xml
install/final_assessment/share/final_assessment/cmake/: final_assessmentConfig.cmake
log/: latest_build
ros_ws/: compile_commands.json
ros_ws/.cache/clangd/index/: align.h.9FB78D0178B8447B.idx  alloc_traits.h.F3E78247041F0BBB.idx  allocated_ptr.h.5941484D80F2DFAD.idx  allocator.h.C73F7957609C8D1B.idx  allocator_common.hpp.54671878FC07C27A.idx  allocator_deleter.hpp.A079615F55E74032.idx  any_executable.hpp.0DB733D55DB45A10.idx  any_service_callback.hpp.6851D815CC7CF78F.idx  any_subscription_callback.hpp.9182C69AB1EC70A9.idx  armor_points.hpp.0FFE46283BB7507C.idx  armor_points.hpp.F0BF67B7B9EAD223.idx  armor_points__builder.hpp.6CDE48EC24A61841.idx  armor_points__builder.hpp.6DDCC27732BBEFEC.idx  armor_points__struct.hpp.131A3CEEAB5164F6.idx  armor_points__struct.hpp.C195754AACB2763D.idx  armor_points__traits.hpp.100F26F5AB30EC7E.idx  armor_points__traits.hpp.D55A34F5A3863142.idx  armor_points__type_support.hpp.62A1CC076BFF18FA.idx  armor_points__type_support.hpp.FBE69581238BC1AC.idx  armor_pose.hpp.544FABB27A809119.idx  armor_pose.hpp.E682E092697BE5A8.idx  armor_pose__builder.hpp.28303B2CF9848A67.idx  armor_pose__builder.hpp.75917620920C449E.idx  armor_pose__struct.hpp.71F9A4DB7CF26FF7.idx  armor_pose__struct.hpp.8B076D0AD2AFFE09.idx  armor_pose__traits.hpp.29E72BD4EBFCA059.idx  armor_pose__traits.hpp.5529AC99EB228422.idx  armor_pose__type_support.hpp.59840148AB0BF10E.idx  armor_pose__type_support.hpp.78A598E6EAE5448D.idx  array.964D276A88C4B6FD.idx  assert.h.F44EF353D67C7E11.idx  atomic.C3F277D98C9C5E57.idx  atomic_base.h.8E30BE0CABE3A9D8.idx  atomic_futex.h.75392F5A01257DFD.idx  auto_ptr.h.8E36BE2C90FE0884.idx  basic_ios.h.80C6E45AB0922292.idx  basic_ios.tcc.22DE5D8007B9855F.idx  basic_string.h.B5C6A696D1425819.idx  basic_string.tcc.7E353E526AF1CF03.idx  bit.97A6729171C74BEB.idx  (+346 more)
ros_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_ws/install/armor_interface/share/armor_interface/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros_ws/install/bringup/share/bringup/: package.sh
ros_ws/install/final_assessment/lib/final_assessment/: publisher
ros_ws/log/: latest_build
ros_ws/src/Final_assessment/: CMakeLists.txt  package.xml
ros_ws/src/armor_interface/: CMakeLists.txt  package.xml
ros_ws/src/armor_interface/msg/: ArmorPose.msg
ros_ws/src/bringup/: package.xml  setup.py
ros_ws/src/bringup/config/: data.csv  kalman.yaml
ros_ws/src/bringup/launch/: bringup.launch.py
ros_ws/src/final_assessment/: CMakeLists.txt
ros_ws/src/final_assessment/src/: camera_info_publisher.cpp  camera_parameters_publisher.cpp
ros_ws/src/kf_solve/: CMakeLists.txt
ros_ws/src/kf_solve/include/kf_solve/: kalman_filter.hpp
ros_ws/src/kf_solve/src/: kalman_filter.cpp
ros_ws/src/pnp_solve/: CMakeLists.txt
ros_ws/src/pnp_solve/include/pnp_solve/: pnp_solve.hpp
ros_ws/src/pnp_solve/src/: pnp_solve.cpp
ros_ws/src/publisher_armor/: CMakeLists.txt
ros_ws/src/publisher_armor/src/: publisher_armor.cpp
ros_ws/src/publisher_camera/: CMakeLists.txt
ros_ws/src/publisher_camera/src/: publisher_camera.cpp
ros_ws/src/subscriber/: CMakeLists.txt  package.xml
ros_ws/src/subscriber/src/: subscriber.cpp
(+84 files in other folders)
